# yage

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LOG.txt  License.txt  README.md  default.txt  install_glfw.sh  install_glm.sh  install_soil.sh  install_spdlog.sh  plan.txt
assets/: resource_overview
assets/materials/: Default.xml  TestMaterial.xml
assets/meshes/: Default.xml  Lego.xml
assets/scripts/: CameraScript.xml  FPSCamera.lua  test.as  test.lua
assets/shaders/: BasicShader.xml  Default.xml  basic.fs  basic.vs
assets/textures/: Default.xml
config/: config.ini
core/: CMakeLists.txt  Makefile
core/include/: GLDevice.h  Input.h  Logger.h  RefCounted.h  Reference.h  Singleton.h  Transform.h  Window.h  config.h  yage.h
core/include/Events/: Event.h  EventBus.h  EventListener.h  InputEvent.h
core/include/GameObjects/: GameObject.h
core/include/GameObjects/Components/: Component.h  TransformComponent.h
core/include/Graphics/: Camera.h  Light.h  Material.h  Mesh.h  Renderer.h
core/include/Graphics/OpenGL/: GLDevice.h  IndexBuffer.h  Program.h  Shader.h  Texture.h  VertexBuffer.h
core/include/ResourceManagement/: Resource.h  ResourceLoader.h  ResourceManager.h
core/include/ResourceManagement/Loaders/: AngelScriptLoader.h  MaterialLoader.h  MeshLoader.h  ResourceLoader.h  ScriptLoader.h  ShaderLoader.h  TextureLoader.h  WavefrontLoader.h
core/include/Scene/: GameObjectManager.h  Scene.h  SceneManager.h
core/include/Scene/GameObjects/: GameObject.h
core/include/Scene/GameObjects/Components/: CameraComponent.h  Component.h  MaterialComponent.h  MeshComponent.h  ScriptComponent.h  TransformComponent.h
core/include/Scripting/: IOAPI.h  Script.h  ScriptAPI.h  ScriptingEngine.h
core/include/Util/: FileReader.h  Util.h
core/src/: GLDevice.cpp  Input.cpp  Logger.cpp  Reference.cpp  Transform.cpp  Window.cpp  yage.cpp
core/src/Events/: EventBus.cpp
core/src/GameObjects/: GameObject.cpp
core/src/Graphics/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Renderer.cpp
core/src/Graphics/OpenGL/: GLDevice.cpp  IndexBuffer.cpp  Program.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
core/src/ResourceManagement/: Resource.cpp  ResourceLoader.cpp  ResourceManager.cpp
core/src/ResourceManagement/Loaders/: AngelScriptLoader.cpp  MaterialLoader.cpp  MeshLoader.cpp  ResourceLoader.cpp  ScriptLoader.cpp  ShaderLoader.cpp  TextureLoader.cpp  WavefrontLoader.cpp
core/src/Scene/: Scene.cpp  SceneManager.cpp
core/src/Scene/GameObjects/: GameObject.cpp
core/src/Scripting/: Script.cpp  ScriptAPI.cpp  ScriptingEngine.cpp
core/src/Util/: FileReader.cpp  Util.cpp
core/test/: CMakeLists.txt  test_input.cpp
editor/: CMakeLists.txt  Makefile
editor/include/: Configuration.h  Gui.h  ResourceBrowser.h
editor/include/gui/: EventListener.h  GameObjectElement.h  Gui.h  GuiElement.h  MainMenu.h  MenuElement.h  MeshResourceView.h  ResourceBrowser.h  ResourceGui.h  ResourceView.h  SceneView.h  ShaderResourceView.h
editor/src/: Configuration.cpp  Gui.cpp  MovingCamera.cpp  MovingCamera.h  ResourceBrowser.cpp  main.cpp
editor/src/gui/: GameObjectElement.cpp  Gui.cpp  GuiElement.cpp  MainMenu.cpp  MenuElement.cpp  MeshResourceView.cpp  ResourceBrowser.cpp  ResourceGui.cpp  ResourceView.cpp  SceneView.cpp  ShaderResourceView.cpp
